# mpl-token-auth-rules

./: .ammanrc.js  .gitignore  .solitarc.js  README.md  package.json  pnpm-lock.yaml
.amman/accounts/: 4VLgNs1jXgdciSidxcaLKfrR9WjATkj6vmTm5yCwNwui.json  PwDiXFxQsGra4sFFTT8r1QWRMd4vfumiWC1jfWNfdYT.json  metaqbxxUerdq28cj1RbAWkYQm3ybzjb6a8bt518x1s.json
.crates/: .crates.toml  .crates2.json
.github/: .env  file-filters.yml
.github/actions/build-program/: action.yml
.github/actions/install-linux-build-deps/: action.yml
.github/workflows/: build-programs.yml  ci.yml  deploy-js.yml  deploy-program.yml  main.yml  program-test.yml  sdk-test.yml  test-commit.yml  test-js.yml  test-programs.yml
amman/: solpair1.json  solpair2.json
cli/: README.md  package.json
cli/examples/: additional_signer.json  all.json  amount.json  any.json  derived_key_match.json  example.json  frequency.json  hydra.json  not.json  pass.json  program_owned.json  pubkey_list_match.json  pubkey_match.json  pubkey_tree_match.json
cli/src/: auth.ts  hydra.ts
cli/src/helpers/: pda.ts  (+3 more)
clients/cli/: .prettierrc.js  README.md  package.json  pnpm-lock.yaml
clients/js/: CONTRIBUTING.md  README.md  package.json  pnpm-lock.yaml  tsconfig.json
clients/js-solita/: README.md  package.json  pnpm-lock.yaml  tsconfig.build.json  typedoc.json
configs/: kinobi.cjs  shank.cjs  validator.cjs  validator.devnet.cjs  validator.mainnet.cjs
configs/program-scripts/: dump.sh  test.sh
idls/: mpl_token_auth_rules.json
program/: Cargo.toml
program/src/: data.rs  entrypoint.rs  error.rs  instruction.rs  lib.rs  payload.rs  pda.rs  processor.rs  types.rs  utils.rs
program/src/ed25519/: edwards.rs  field.rs  mod.rs
program/src/ed25519/backend/: constants.rs  field.rs  scalar.rs
program/src/processor/: create_or_update.rs  mod.rs  puff_rule_set.rs  validate.rs  write_to_buffer.rs
program/src/state/: frequency.rs  mod.rs  rule_set.rs  rules.rs
program/src/state/primitives/: additional_signer.rs  mod.rs
program/src/state/rules/: all.rs  any.rs  mod.rs  rule_set.rs
program/src/state/v2/: mod.rs  rule_set_v2.rs  rule_v2.rs
program/src/state/v2/constraint/: additional_signer.rs  all.rs  amount.rs  any.rs  frequency.rs  is_wallet.rs  mod.rs  namespace.rs  not.rs  pass.rs  pda_match.rs  program_owned.rs  program_owned_list.rs  program_owned_tree.rs  pubkey_list_match.rs  pubkey_match.rs  pubkey_tree_match.rs
program/src/state_v2/: mod.rs  rule.rs  rule_set.rs
program/src/state_v2/asserts/: all.rs  amount.rs  any.rs  program_owned_list.rs
program/src/state_v2/conditions/: additional_signer.rs  all.rs  amount.rs  any.rs  frequency.rs  is_wallet.rs  mod.rs  namespace.rs  not.rs  pass.rs  pda_match.rs  program_owned.rs  program_owned_list.rs  program_owned_tree.rs  pubkey_list_match.rs  pubkey_match.rs  pubkey_tree_match.rs
program/src/utils/: deserializer.rs  mod.rs
program/tests/: additional_signer.rs  additional_signer_v2.rs  all.rs  all_v2.rs  amount.rs  amount_v2.rs  any.rs  any_v2.rs  basic_royalty_enforcement.rs  buffered_rule_set.rs  composed_rule.rs  composed_rule_v2.rs  create_account_and_data_checks.rs  denylist_royalty_enforcement.rs  frequency.rs  frequency_v2.rs  integration.rs  is_wallet.rs  is_wallet_v2.rs  multiple_operations.rs  namespace_royalty_enforcement.rs  namespace_royalty_enforcement_v2.rs  not.rs  not_v2.rs  pass.rs  pass_v2.rs  pda_match.rs  pda_match_v2.rs  program_owned.rs  program_owned_list.rs  program_owned_list_v2.rs  program_owned_set.rs  program_owned_tree.rs  program_owned_tree_match.rs  program_owned_tree_v2.rs  program_owned_v2.rs  pubkey_list_match.rs  pubkey_list_match_v2.rs  pubkey_match.rs  pubkey_match_v2.rs  (+7 more)
program/tests/utils/: mod.rs
programs/token-auth-rules/: Cargo.toml
programs/token-auth-rules/src/: entrypoint.rs  error.rs  instruction.rs  lib.rs  payload.rs  utils.rs
programs/token-auth-rules/src/processor/: mod.rs  validate.rs
programs/token-auth-rules/src/state/: frequency.rs  rule_set.rs  rules.rs
programs/token-auth-rules/src/state/v2/constraint/: amount.rs  is_wallet.rs  pubkey_match.rs
programs/token-auth-rules/tests/: additional_signer.rs  additional_signer_v2.rs  all.rs  all_v2.rs  amount.rs  amount_v2.rs  any.rs  any_v2.rs  basic_royalty_enforcement.rs  buffered_rule_set.rs  composed_rule.rs  composed_rule_v2.rs  create_account_and_data_checks.rs  frequency.rs  frequency_v2.rs  is_wallet.rs  is_wallet_v2.rs  multiple_operations.rs  namespace_royalty_enforcement.rs  namespace_royalty_enforcement_v2.rs  not.rs  not_v2.rs  pass.rs  pass_v2.rs  pda_match.rs  pda_match_v2.rs  program_owned.rs  program_owned_list.rs  program_owned_list_v2.rs  program_owned_set.rs  program_owned_tree.rs  program_owned_tree_v2.rs  program_owned_v2.rs  pubkey_list_match.rs  pubkey_list_match_v2.rs  pubkey_match.rs  pubkey_match_v2.rs  pubkey_tree_match.rs  pubkey_tree_match_v2.rs  update_rule_set_v2.rs  (+3 more)
programs/token-auth-rules/tests/utils/: mod.rs
scripts/: amman.sh
(+383 files in other folders)
