[package]
name = "token-authorization-rules"
version = "0.1.0"
description = "Token Authorization Rules that can be used to restrict common token operations"
authors = ["Metaplex Developers <dev@metaplex.com>"]
repository = "https://github.com/metaplex-foundation/token-authorization-rules"
license = "../LICENSE"
edition = "2021"
readme = "../README.md"

[dependencies]
solana-program = "=1.13.5"
shank = "0.0.11"
borsh = "0.9.3"
thiserror = "~1.0"
num-derive = "0.3.3"
num-traits = "~0.2"
serde = { version = "1.0.147", features = ["derive"]}
serde_json = "1.0.87"
rmp-serde = "1.1.1"

[features]
no-entrypoint = []
test-bpf = []

[dev-dependencies]
assert_matches = "1.5.0"
solana-program-test = "=1.13.5"
solana-sdk = "=1.13.5"
solana-validator = "=1.13.5"
solana-logger = "=1.13.5"
spl-token = "3.5.0"
mpl-token-metadata = "1"

[lib]
crate-type = ["cdylib", "lib"]

[profile.release]
overflow-checks = true     # Enable integer overflow checks.
