[package]
name = "mpl-token-auth-rules"
version = "0.2.5"
description = "MPL Token Authorization Rules that can be used to restrict common token operations"
authors = ["Metaplex Developers <dev@metaplex.com>"]
repository = "https://github.com/metaplex-foundation/mpl-token-auth-rules.git"
license-file = "../LICENSE"
edition = "2021"
readme = "../README.md"
keywords = ["nft", "metaplex", "solana", "blockchain"]

[dependencies]
solana-program = "1.14"
shank = "0.0.11"
borsh = "0.9.3"
thiserror = "1.0"
num-derive = "0.3.3"
num-traits = "0.2"
serde = { version = "1.0.149", features = ["derive"]}
serde_with = { version = "1.14.0", optional = true }
rmp-serde = "1.1.1"
mpl-token-metadata-context-derive = "0.0.1"
solana-zk-token-sdk = "1.14"

[features]
no-entrypoint = []
test-bpf = []
serde-feature = ["serde_with"]

[dev-dependencies]
assert_matches = "1.5.0"
solana-program-test = "1.14"
solana-sdk = "1.14"
solana-logger = "1.14"
spl-token = { version = "3.5.0", features = [ "no-entrypoint" ] }
mpl-token-metadata = { version = "1", features = [ "no-entrypoint" ] }
serde_json = "1.0.87"
spl-associated-token-account = { version = "1.1.1", features = ["no-entrypoint"] }

[lib]
crate-type = ["cdylib", "lib"]

[profile.release]
overflow-checks = true     # Enable integer overflow checks.
